# shiny-engine

./: .travis.yml  CMakeLists.txt  LICENSE  build.bash  clone-and-build.bash  uber.bash
ci/: shellcheck.bash
